--- a/about.html
+++ b/about.html
@@ -103,7 +103,7 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}div[submit-success] 
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy website maker</a></section><section class="mbr-section content19 cid-suAgwpc8E3" id="content19-i">
+<section class="engine"><a href="https://mobirise.info/d">free web maker</a></section><section class="mbr-section content19 cid-suAgwpc8E3" id="content19-i">
 
     
 
@@ -126,7 +126,7 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}div[submit-success] 
     <div class="container">
         <div class="mbr-row mbr-jc-c">
             <div class="image-block mbr-col-sm-12 mbr-col-md-6 ">
-                <amp-img src="assets/images/mbr-98x94.png" layout="responsive" width="1015.4468085106383" height="974" alt="Advocate Muzamil Hassan is a highly qualified and skilled lawyer, I bring a wealth of expertise in the fields of civil, criminal, and family law. With a LL.B (Bachelor of Laws) degree, I have a comprehensive understanding of the intricacies of the legal system and a deep passion for helping my clients navigate through their legal challenges. My membership in both the Karachi Bar Association and the American Bar Association further demonstrates my commitment to professional excellence and staying up-to-date with the latest developments in the legal field.  With extensive experience in handling criminal trials and appeals, I am well-equipped to represent my clients in court and provide them with the best possible outcome. My knowledge and experience in a variety of legal areas allows me to provide expert advice and guidance to my clients on a wide range of legal matters, including contracts, property disputes, and family law issues.  I am dedicated to providing my clients with the highest quality legal representation, and I am committed to working tirelessly to achieve the best possible outcome for their case. Whether you are facing a criminal trial, an appeal, or seeking advice on a legal matter, I am here to help. With my deep knowledge of the law, my exceptional legal skills, and my unwavering commitment to my clients, I am confident that I can provide the guidance and support you need to achieve the best possible outcome." class="mobirise-loader" title="About Advocate Muzamil Hassan - Lawyer in Karachi, Pakistan.">
+                <amp-img src="assets/images/1710671149287-957x960.jpg" layout="responsive" width="970.95625" height="974" alt="Advocate Ahmed Ali Khan Gabol is a highly qualified and skilled lawyer, I bring a wealth of expertise in the fields of civil, criminal, and family law. With a LL.B (Bachelor of Laws) degree, I have a comprehensive understanding of the intricacies of the legal system and a deep passion for helping my clients navigate through their legal challenges. My membership in both the Karachi Bar Association and the American Bar Association further demonstrates my commitment to professional excellence and staying up-to-date with the latest developments in the legal field.  With extensive experience in handling criminal trials and appeals, I am well-equipped to represent my clients in court and provide them with the best possible outcome. My knowledge and experience in a variety of legal areas allows me to provide expert advice and guidance to my clients on a wide range of legal matters, including contracts, property disputes, and family law issues.  I am dedicated to providing my clients with the highest quality legal representation, and I am committed to working tirelessly to achieve the best possible outcome for their case. Whether you are facing a criminal trial, an appeal, or seeking advice on a legal matter, I am here to help. With my deep knowledge of the law, my exceptional legal skills, and my unwavering commitment to my clients, I am confident that I can provide the guidance and support you need to achieve the best possible outcome." class="mobirise-loader" title="About Advocate Ahmed Ali Khan Gabol - Lawyer in Karachi, Pakistan.">
                     <div placeholder="" class="placeholder">
                                 <div class="mobirise-spinner">
                                     <em></em>
@@ -151,7 +151,7 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}div[submit-success] 
 
     <div class="container">
         <div class="image-block mbr-m-auto">
-            <amp-img src="assets/images/1626965842151-1-336x336.png" layout="responsive" width="432" height="432" alt="Karachi Bar and american bar memebr Advocate Arslan Abid " class="mobirise-loader" title="Karachi Bar Advocate Arslan Abid ">
+            <amp-img src="assets/images/1626965842151-1-336x336.png" layout="responsive" width="222" height="222" alt="Karachi Bar and american bar memebr Advocate Arslan Abid " class="mobirise-loader" title="Karachi Bar Advocate Arslan Abid ">
                 <div placeholder="" class="placeholder">
                                 <div class="mobirise-spinner">
                                     <em></em>
